# sshthing

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENCE  README.md  rust-toolchain.toml
.github/actions/: cd.yaml
.github/workflows/: cd.yaml
src/: cli.rs  errors.rs  keep_awake.rs  key.rs  main.rs
src/key/: ed25519.rs  mod.rs
