[package]
name = "sshthing"
version = "0.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
ed25519-dalek = "2.1.1"
memchr = "2.7.5"
mimalloc = "0.1.46"
num_cpus = "1.17.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
sha2 = "0.10.9"
smallvec = { version = "1.15.1", features = ["const_new"] }
thiserror = "2.0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_System_Power",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.flamegraph]
inherits = "release"
debug = true
